[package]
name = "RollBackTool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.14.0"
jsonpath = "0.1.1"
http = "0.2.7"
reqwest = {version = "0.11.10",features = ["json","cookies"] }
tokio = {version ="1.18.2",features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
html_parser = "0.6.3"